...
  "expiryAbbrev": "exp.",
  "@expiryAbbrev": {
    "description": "Abréviation affichée avant les dates d'expiration (ex. 'exp. 2025-12-25')"
  },
  "save": "Enregistrer",
  "reset": "Réinitialiser",
  "saved": "Enregistré",
  "resetSettings": "Réinitialiser les paramètres",
  "resetSettingsConfirmation": "Êtes-vous sûr de vouloir réinitialiser tous les paramètres à leurs valeurs par défaut ? Cette action est irréversible.",
  "cancel": "Annuler",
  "settingsResetToDefaults": "Paramètres réinitialisés",
  "inStock": "En stock",
  "all": "Tout",
...
